base/src/test/resources/failure/tyck/literal-ambiguous-3.aya.txt
In file $FILE:6:24 ->

  4 | 
  5 | // TODO: make this work
  6 | def good : List Unit => [ ]
                              ^-^

Error: Unable to solve the type of this literal:
         [  ]
       I'm confused about the following candidates, please help me!
         `List`, `List2`

In file $FILE:8:11 ->

  6 | def good : List Unit => [ ]
  7 | 
  8 | def bad => [ unit ]
                 ^------^

Error: Unable to solve the type of this literal:
         [ unit ]
       I'm confused about the following candidates, please help me!
         `List`, `List2`

2 error(s), 0 warning(s).
What are you doing?
